# Hadoop-Distributed-Chat

./: .gitignore  .project  1576028449_Ardalan_Ardalan  1576204687_Ardalan_Ardalan  1576204989_Ardalan_Ardalan  CMakeLists.txt  README.md  dependency-reduced-pom.xml  pom.xml  run_server.sh  users
src/: Message.java
src/main/java/com/steve/hdc/: App.java  Bindings.java  Client.java  ClientGui.form  ClientGui.java  DataManager.java  DataManagerRemote.java  Endpoints.java  Message.java  MessageList.java  Parser.java  Server.java
src/main/java/com/steve/hdc/client/: ClientGUI.form  ClientGUI.java  Employee.java  HDCClient.java  Receiver.java  User.java
src/test/java/com/steve/hdc/: AppTest.java  ClientTests.java
